// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ad huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "900",
              "lineHeight": 22,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginTop": 5,
            }
          }
        >
          <Text>
            
            ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile ad medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "lineHeight": 20,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile ad wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "lineHeight": 20,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 0,
              "marginTop": 5,
            }
          }
        >
          <Text>
            
            ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile ad without breakpoint should be like medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "lineHeight": 20,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;
